--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ target_include_directories(cyka INTERFACE
         $<INSTALL_INTERFACE:include>)
 target_link_libraries(cyka INTERFACE Eigen3::Eigen)
 target_compile_features(cyka INTERFACE cxx_std_23)
-target_sources(cyka INTERFACE $<BUILD_INTERFACE:${headers}>)
+target_precompile_headers(cyka INTERFACE $<BUILD_INTERFACE:${headers}>)
 
 add_subdirectory(test)
