--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,6 @@ function(cyka_add_test src_name)
     target_link_libraries(test_${stem} PRIVATE cyka::cyka)
 endfunction()
 
+cyka_add_test(compiler_features.cpp)
 cyka_add_test(initiate.cpp)
 cyka_add_test(crossovers.cpp)
