--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -61,11 +61,13 @@ jobs:
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
     - name: Install deps with vcpkg
-      if: matrix.os==windows-latest
-      run: vcpkg install eigen3
+      if: matrix.os=='windows-latest'
+      run: | 
+        choco install ninja
+        vcpkg install --triplet=x64-windows eigen3
 
     - name: Install deps with apt
-      if: matrix.os==ubuntu-latest
+      if: matrix.os=='ubuntu-latest'
       run: apt install libeigen3-dev ninja
 
     - name: Configure CMake
