--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -19,24 +19,23 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install deps
-        run: >
+        run: |
           choco install ninja
           vcpkg install --triplet=x64-windows eigen3
 
       - name: Configure
         shell: cmd
-        run: >
+        run: |
           mkdir build
           mkdir install
           "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" & cmake -S . -B ./build -G Ninja -DCMAKE_C_COMPILER:FILEPATH=${{matrix.compiler}} -DCMAKE_CXX_COMPILER:FILEPATH=${{matrix.compiler}} -DCMAKE_PREFIX_PATH:PATH=C:/vcpkg/installed/x64-windows -DCMAKE_INSTALL_PREFIX:PATH=install -DCMAKE_BUILD_TYPE="${{ matrix.build_type }}"
       - name: Build
         shell: cmd
-        run: >
-          cmake --build ./build --parallel
+        run: cmake --build ./build --parallel
 
       - name: Test
         shell: cmd
-        run: >
+        run: |
           cd /d ./build
           ctest . --parallel --output-on-failure
 
