--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -23,11 +23,17 @@ jobs:
           choco install ninja
           vcpkg install --triplet=x64-windows eigen3
 
-      - name: Tree at msvc installation prefix
-        run: tree C:\PROGRA~1\MICROS~2\2022\ENTERP~1\VC\Tools\MSVC\1438~1.331
+      - name: ls -l ad msvc include dir
+        shell: cmd
+        run: | 
+          cd /d C:\PROGRA~1\MICROS~2\2022\ENTERP~1\VC\Tools\MSVC\1438~1.331
+          ls -l
 
-      - name: Tree at windows kit installation prefix
-        run: tree "C:\Program Files (x86)\Windows Kits\10"
+#      - name: Tree at msvc installation prefix
+#        run: tree C:\PROGRA~1\MICROS~2\2022\ENTERP~1\VC\Tools\MSVC\1438~1.331
+#
+#      - name: Tree at windows kit installation prefix
+#        run: tree "C:\Program Files (x86)\Windows Kits\10"
 
       - name: Configure
         shell: cmd
